fix: fix no visible content in buttons cy-250

--- a/apps/frontend/src/pages/choose-style/style.module.css
+++ b/apps/frontend/src/pages/choose-style/style.module.css
@@ -202,7 +202,6 @@
 		display: block;
 		margin-right: auto;
 		margin-left: auto;
-		font-size: 0%;
 	}
 }
 
